Thu Aug 19 12:09:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inet.mpb:
        * bin/MakeProjectCreator/config/inetssl.mpb:
        * protocols/ace/INet/inet.mpc:
        * protocols/ace/INet/inet_ssl.mpb:
	  Changes to split INet into 2 libraries; regular and SSL.
	  Fixes dependencies of DAnCE tools on SSL.

Wed Aug 18 09:26:04 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * netsvcs/lib/Client_Logging_Handler.cpp:
          Fixed a compile warning.

Tue Aug 17 07:34:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * ace/CDR_Stream.cpp
        Add Id

Mon Aug 16 22:00:06 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * examples/Reactor/Misc/Reactor_Misc.mpc:

          Explicitly list an empty Template_Files so that the *_t.cpp doesn't
          get added to Template_Files.

Mon Aug 16 12:58:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * ace/Auto_Event.cpp:
        * ace/CDR_Stream.cpp:
        * ace/Cleanup.cpp:
        * ace/Codecs.cpp:
        * ace/DEV_Addr.cpp:
        * ace/Dynamic_Service_Base.cpp:
        * ace/Filecache.cpp:
        * ace/Flag_Manip.cpp:
        * ace/FlReactor/FlReactor.cpp:
        * ace/FoxReactor/FoxReactor.cpp:
        * ace/Handle_Ops.cpp:
        * ace/Hashable.cpp:
        * ace/INET_Addr.cpp:
        * ace/Init_ACE.cpp:
        * ace/Local_Tokens.cpp:
        * ace/Logging_Strategy.cpp:
        * ace/Malloc.cpp:
        * ace/MEM_Addr.cpp:
        * ace/Message_Block.cpp:
        * ace/Method_Request.cpp:
        * ace/Multihomed_INET_Addr.cpp:
        * ace/Name_Request_Reply.cpp:
        * ace/OS_NS_string.cpp:
        * ace/OS_Thread_Adapter.cpp:
        * ace/Parse_Node.cpp:
        * ace/Ping_Socket.cpp:
        * ace/POSIX_Asynch_IO.cpp:
        * ace/POSIX_CB_Proactor.cpp:
        * ace/Proactor.cpp:
        * ace/Proactor_Impl.cpp:
        * ace/Process_Manager.cpp:
        * ace/QoS/QoS_Decorator.cpp: